--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -6,6 +6,10 @@
   <link rel="icon" type="image/svg+xml" href="./public/favicon.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Medico</title>
+
+  <link rel="preload" href="./src/assets/Fonts/Poppins/Poppins-Medium.woff2" as="font" type="font/woff2" crossorigin>
+  <link rel="preload" href="./src/index.css" as="style">
+
 </head>
 
 <body>
